@@ -1,2 +1,8 @@
-EXTRA_DIST = TODO
+m4datadir = $(datadir)/aclocal
+m4data_DATA = wfmath.m4
+
+bin_SCRIPTS = wfmath-config
+
+EXTRA_DIST = TODO autogen.sh wfmath.m4 wfmath-config.in
+
 SUBDIRS = wfmath atlas doc
